--- a/lessonFour/package.json
+++ b/lessonFour/package.json
@@ -12,6 +12,11 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.23",
+    "moment": "^2.30.1"
   }
 }
