--- a/lessonFour/package.json
+++ b/lessonFour/package.json
@@ -12,10 +12,11 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "lodash": "^4.17.23",
     "moment": "^2.30.1"
   }
