--- a/lessonFour/package.json
+++ b/lessonFour/package.json
@@ -12,12 +12,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "dotenv": "^17.3.1",
     "lodash": "^4.17.23",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "nodemailer": "^8.0.1"
   }
 }
