--- a/lessonFivePart2/package.json
+++ b/lessonFivePart2/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon task1.js"
+    "dev": "nodemon task2.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "moment": "^2.30.1"
   }
 }
